assets/css/main.css
/*complementary
008357
1C5C46
00AC72
F22F00
911C00
*/


::selection {
  background: #00AC72; /* WebKit/Blink Browsers */
}

::-moz-selection {
  background: #00AC72; /* Gecko Browsers */
}


html,
body,
.cover {
    height: 100%;
    font-family: 'Roboto', sans-serif;
}

.btn-extra-padding {
  padding-top:15px;
  padding-bottom:15px;
}

section {
  padding-top:10px;
  padding-bottom:20px;
}
.navbar-brand {
  font-family: 'Sanchez', serif;
}

.navbar-brand img {
  height:20px;
  display:inline;
}

h1,h2 {
    font-family: 'Sanchez', serif;
    font-weight:700;

}

h2 {
  margin-bottom:20px;
}

.orange {
    color:#FF9900;
}

.green {
    color: #00AC71;
}

.cover {
	background: url('../img/cover-green4.png') top left no-repeat;
    background-size: cover;
    display: table;
    width: 100%;
    box-shadow:inset 0 0 100px #000;
}

.cover-text {
    text-align: center;
    color: #fff;
    display: table-cell;
    vertical-align: middle;
}

.cover-text h1 {
    margin: 0;
    font-size: 78px;
    letter-spacing: -3px;
    text-transform: ;
    font-weight:700;
    letter-spacing: 2px;
    text-shadow: 1px 1px 1px rgba(0,0,0,0.5);
}

.cover-text-secondary {
    margin-top:20px;
    margin-bottom:50px;
    font-size:22px;
    letter-spacing: 2px;
    text-shadow: 1px 1px 1px rgba(0,0,0,0.5);
}

.cover .btn {
 
    margin-bottom:20px;
    width:400px;
}

nav.navbar-default {
    background: white;
    border:none;

    -webkit-box-shadow: 0 0 10px rgba(0,0,0,0.1);
    -moz-box-shadow: 0 0 10px rgba(0,0,0,0.1);
    box-shadow: 0 0 10px rgba(0,0,0,0.1);
}

.navbar-default .navbar-nav>li>a:hover {
    color:#00AC72;
}

#sign-in {
    border:2px solid #FF9900;
    background:none;
    color: #FF9900;
}

.infobox {
    background:#1C5C46;
}

.infobox-inner {
    border:none;
    margin:0;
    font-style: italic;
    font-size:32px;
    color:white;

    display: block;
    margin-top: 1em;
    margin-bottom: 1em;
    margin-left: 40px;
    margin-right: 40px;
}

/* --- How It Works --- */

.howitworks {
 
 
}

.howitworks img {
    width:65%;
    display: block;
    margin-left: auto;
    margin-right: auto 
}

.howitworks h3 {
    text-align:center;
    font-size:20px;
}

/* --- Curriculum ---*/

.curriculum {
    background: #fafafa;
    border-top: 2px solid #dfdfdf;
    border-bottom: 2px solid #dfdfdf;

}

.curriculum h2 {
    margin-bottom:30px;
}

.curriculum p{
    font-size:28px;
    text-align:right;
}

#curriculum-explanation {
    font-size:16px;
    text-align: justify;
    padding:80px 100px 20px 100px;
}

.curriculum .btn {
  display:block;
  width:80%;
  margin:0 auto;
  margin-bottom:20px;
}

/*--- Skills You'll Learn Section ---*/

.fa {
    font-size:80px;
    color: #b6a57d;
}

.skills {
    font-size:20px;
    text-align:center;
    margin-bottom:20px;
}

.skills img {
    width:50%;
}

/*--- Testimonials Section ---*/

#testimonials {
}

#testimonials img {
    display:block;
    margin:0 auto;
    height:200px;
    border:10px solid #7b6c45;

    -webkit-box-shadow: 0px 0px 8px 0px rgba(0,0,0,0.75);
    -moz-box-shadow: 0px 0px 8px 0px rgba(0,0,0,0.75);
    box-shadow: 0px 0px 8px 0px rgba(0,0,0,0.75);

}

.testimonial-text-box {
  padding:10px 20px;
  font-size:17px;
  text-align:justify;
}

.testimonial-name {
  text-align: right;
  font-size:15px;
}

#testimonials .btn {
  display:block;
  width:50%;
  margin:0 auto;
  margin-bottom:20px;
}

/*--- FOOTER SECTION ---*/

footer {
  background:#b6a57d;
  padding-top:30px;
  padding-bottom:30px;
  font-size:16px;
  color:#7b6c45;
}

footer h2 {
  margin:0;
  margin-bottom:10px;
}

footer img {
  width:50px;
  color:white;
}

footer svg {
  fill:red;
}

footer ul {
  list-style-type: none;
  padding:30px 0 0 0 ;
}

.footer-icon {
  font-size: 35px;
  padding:10px;
}

/*===============
    BUTTONS
===============*/

/* --- btn-green --- */
.btn-green {
  color: #fff;
  background-color: #00AC72;
  border-color: #1C5C46;
}
.btn-green:focus,
.btn-green.focus {
  color: #fff;
  background-color: #008357;
  border-color: #1C5C46;
}
.btn-green:hover {
  color: #fff;
  background-color: #008357;
  border-color: #1C5C46;
}
.btn-green:active,
.btn-green.active,
.open > .dropdown-toggle.btn-green {
  color: #fff;
  background-color: #008357;
  border-color: #1C5C46;
}
.btn-green:active:hover,
.btn-green.active:hover,
.open > .dropdown-toggle.btn-green:hover,
.btn-green:active:focus,
.btn-green.active:focus,
.open > .dropdown-toggle.btn-green:focus,
.btn-green:active.focus,
.btn-green.active.focus,
.open > .dropdown-toggle.btn-green.focus {
  color: #fff;
  background-color: #1C5C46;
  border-color: #1C5C46;
}
.btn-green:active,
.btn-green.active,
.open > .dropdown-toggle.btn-green {
  background-image: none;
}
.btn-green.disabled:hover,
.btn-green[disabled]:hover,
fieldset[disabled] .btn-green:hover,
.btn-green.disabled:focus,
.btn-green[disabled]:focus,
fieldset[disabled] .btn-green:focus,
.btn-green.disabled.focus,
.btn-green[disabled].focus,
fieldset[disabled] .btn-green.focus {
  background-color: #00AC72;
  border-color: #1C5C46;
}
.btn-green .badge {
  color: #00AC72;
  background-color: #fff;
}

/* --- btn-inverse --- */
.btn-inverse {
  color: #fff;
  background-color: rgba(204, 204, 204, 0.0);
  border-color: #fff;
}
.btn-inverse:focus,
.btn-inverse.focus {
  color: #fff;
  background-color: rgba(204, 204, 204, 0.3);
  border-color: #fff;
}
.btn-inverse:hover {
  color: #fff;
  background-color: rgba(204, 204, 204, 0.3);
  border-color: #fff;
}
.btn-inverse:active,
.btn-inverse.active,
.open > .dropdown-toggle.btn-inverse {
  color: #fff;
  background-color: rgba(204, 204, 204, 0.3);
  border-color: #fff;
}
.btn-inverse:active:hover,
.btn-inverse.active:hover,
.open > .dropdown-toggle.btn-inverse:hover,
.btn-inverse:active:focus,
.btn-inverse.active:focus,
.open > .dropdown-toggle.btn-inverse:focus,
.btn-inverse:active.focus,
.btn-inverse.active.focus,
.open > .dropdown-toggle.btn-inverse.focus {
  color: #fff;
  background-color: rgba(204, 204, 204, 0.6);
  border-color: #fff;
}
.btn-inverse:active,
.btn-inverse.active,
.open > .dropdown-toggle.btn-inverse {
  background-image: none;
}
.btn-inverse.disabled:hover,
.btn-inverse[disabled]:hover,
fieldset[disabled] .btn-inverse:hover,
.btn-inverse.disabled:focus,
.btn-inverse[disabled]:focus,
fieldset[disabled] .btn-inverse:focus,
.btn-inverse.disabled.focus,
.btn-inverse[disabled].focus,
fieldset[disabled] .btn-inverse.focus {
  background-color: #5cb85c;
  border-color: #fff;
}
.btn-inverse .badge {
  color: #5cb85c;
  background-color: #fff;
}

/* --- btn-orange --- */
.btn-orange {
  color: #fff;
  background-color: #FF9900;
  border-color: #cc7a00;
}
.btn-orange:focus,
.btn-orange.focus {
  color: #fff;
  background-color: #e68a00;
  border-color: #cc7a00;
}
.btn-orange:hover {
  color: #fff;
  background-color: #e68a00;
  border-color: #cc7a00;
}
.btn-orange:active,
.btn-orange.active,
.open > .dropdown-toggle.btn-orange {
  color: #fff;
  background-color: #e68a00;
  border-color: #cc7a00;
}
.btn-orange:active:hover,
.btn-orange.active:hover,
.open > .dropdown-toggle.btn-orange:hover,
.btn-orange:active:focus,
.btn-orange.active:focus,
.open > .dropdown-toggle.btn-orange:focus,
.btn-orange:active.focus,
.btn-orange.active.focus,
.open > .dropdown-toggle.btn-orange.focus {
  color: #fff;
  background-color: #cc7a00;
  border-color: #cc7a00;
}
.btn-orange:active,
.btn-orange.active,
.open > .dropdown-toggle.btn-orange {
  background-image: none;
}
.btn-orange.disabled:hover,
.btn-orange[disabled]:hover,
fieldset[disabled] .btn-orange:hover,
.btn-orange.disabled:focus,
.btn-orange[disabled]:focus,
fieldset[disabled] .btn-orange:focus,
.btn-orange.disabled.focus,
.btn-orange[disabled].focus,
fieldset[disabled] .btn-orange.focus {
  background-color: #FF9900;
  border-color: #cc7a00;
}
.btn-orange .badge {
  color: #FF9900;
  background-color: #fff;
}

/* --- btn-green-inverse ---*/
.btn-green-inverse {
  color: #00AC72;
  background-color: rgba(204, 204, 204, 0.0);
  border-color: #00AC72;
}
.btn-green-inverse:focus,
.btn-green-inverse.focus {
  color: #00AC72;
  background-color: rgba(204, 204, 204, 0.15);
  border-color: #00AC72;
}
.btn-green-inverse:hover {
  color: #00AC72;
  background-color: rgba(204, 204, 204, 0.15);
  border-color: #00AC72;
}
.btn-green-inverse:active,
.btn-green-inverse.active,
.open > .dropdown-toggle.btn-green-inverse {
  color: #00AC72;
  background-color: rgba(204, 204, 204, 0.15);
  border-color: #00AC72;
}
.btn-green-inverse:active:hover,
.btn-green-inverse.active:hover,
.open > .dropdown-toggle.btn-green-inverse:hover,
.btn-green-inverse:active:focus,
.btn-green-inverse.active:focus,
.open > .dropdown-toggle.btn-green-inverse:focus,
.btn-green-inverse:active.focus,
.btn-green-inverse.active.focus,
.open > .dropdown-toggle.btn-green-inverse.focus {
  color: #00AC72;
  background-color: rgba(204, 204, 204, 0.3);
  border-color: #00AC72;
}
.btn-green-inverse:active,
.btn-green-inverse.active,
.open > .dropdown-toggle.btn-green-inverse {
  background-image: none;
}
.btn-green-inverse.disabled:hover,
.btn-green-inverse[disabled]:hover,
fieldset[disabled] .btn-green-inverse:hover,
.btn-green-inverse.disabled:focus,
.btn-green-inverse[disabled]:focus,
fieldset[disabled] .btn-green-inverse:focus,
.btn-green-inverse.disabled.focus,
.btn-green-inverse[disabled].focus,
fieldset[disabled] .btn-green-inverse.focus {
  background-color: #5cb85c;
  border-color: #00AC72;
}
.btn-green-inverse .badge {
  color: #5cb85c;
  background-color: #00AC72;
}

